--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
     "@tailwindcss/vite": "^4.0.5",
     "@tanstack/react-router": "^1.101.0",
     "@tanstack/start": "^1.101.0",
